--- a/pupe/19.html
+++ b/pupe/19.html
@@ -254,7 +254,7 @@ menuuuuuuuuuuuuuuu
 </div>
 
 <font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/playful%20vampire" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="https://file.pooftie.me/pupe/playful%20vampire.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
 <a href="/pupe/18"><font color="#b08087">← previous outfit</font></a>
 </font>
 
