--- a/recommended.html
+++ b/recommended.html
@@ -327,7 +327,10 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 <img src="https://i.imgur.com/WoYT1el.png"><br>
 <br><br>
 
-<a href="https://web.archive.org/web/20071213151324/http://sozai-love.sakura.ne.jp:80/" target="_blank"><img src="https://i.imgur.com/81Si3Qn.gif"></a>
+<a href="https://purinland.neocities.org" target="_blank"><img src="https://i.imgur.com/iUZ9hzH.png"></a>
+　<a href="https://mysweetpiano.neocities.org" target="_blank"><img width="88px" height="31px"src="https://i.imgur.com/nQkjeXo.gif"></a>
+
+<br><br><a href="https://web.archive.org/web/20071213151324/http://sozai-love.sakura.ne.jp:80/" target="_blank"><img src="https://i.imgur.com/81Si3Qn.gif"></a>
 　<a href="https://milkyglitter.webs.com/pretend" target="_blank"><img src="https://i.imgur.com/lX469Dt.gif"></a>
 　<a href="https://web.archive.org/web/20090205041804mp_/http://party.chottu.net/" target="_blank"><img src="https://i.imgur.com/ZTxeP5F.gif"></a>　　
 
