--- a/recommended.html
+++ b/recommended.html
@@ -328,7 +328,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 <br><br>
 
 <a href="https://purinland.neocities.org" target="_blank"><img src="https://i.imgur.com/iUZ9hzH.png"></a>
-　<a href="https://mysweetpiano.neocities.org" target="_blank"><img width="88px" height="31px"src="https://i.imgur.com/nQkjeXo.gif"></a>
+　<a href="https://mysweetpiano.neocities.org" target="_blank"><img src="https://i.imgur.com/f6ZDC1w.gif"></a>
 
 <br><br><a href="https://web.archive.org/web/20071213151324/http://sozai-love.sakura.ne.jp:80/" target="_blank"><img src="https://i.imgur.com/81Si3Qn.gif"></a>
 　<a href="https://milkyglitter.webs.com/pretend" target="_blank"><img src="https://i.imgur.com/lX469Dt.gif"></a>
