--- a/recommended.html
+++ b/recommended.html
@@ -304,7 +304,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 </div>
 
 <br><br>
-<div class="bq clique"><font style="font-size:10px; letter-spacing:1px;"><a id="linkbjinho" href="http://scented.minty.nu" target="_blank">𝑠𝑐𝑒𝑛𝑡𝑒𝑑</a> // 𝑝𝑜𝑤𝑑𝑒𝑟𝑦 𝑣𝑎𝑛𝑖𝑙𝑙𝑎</font></div>
+<div class="bq clique"><font style="font-size:10px; letter-spacing:1px;"><a id="linkbjinho" href="https://aromatic.wings.nu" target="_blank">𝑎𝑟𝑜𝑚𝑎𝑡𝑖𝑐</a> // 𝑝𝑜𝑤𝑑𝑒𝑟𝑦 𝑣𝑎𝑛𝑖𝑙𝑙𝑎</font></div>
 
 
 <br><br>
