--- a/faq.html
+++ b/faq.html
@@ -512,7 +512,6 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <font color="#aa8f8f"> | </font><a href="#messages"><font color="#d8b6b6">about messages & requests</font></a>
 <font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet journey</font></a>
 <font color="#aa8f8f"> | </font><a href="#socialmedia"><font color="#d8b6b6">about disliking social media</font></a>
-<font color="#aa8f8f"> | </font><a href="#snippets"><font color="#d8b6b6">my web code snippets</font></a>
 <font color="#aa8f8f"> | </font><a href="#content"><font color="#d8b6b6">about my content</font></a>
 <font color="#aa8f8f"> | </font><a href="#selfcare"><font color="#d8b6b6">about self care</font></a>
 <font color="#aa8f8f"> | </font><a href="#individuality"><font color="#d8b6b6">about individuality</font></a>
@@ -525,7 +524,6 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <font color="#aa8f8f"> | </font><a href="#virtual"><font color="#d8b6b6">virtual world issues</font></a>
 <font color="#aa8f8f"> | </font><a href="#ego"><font color="#d8b6b6">fragility of the ego</font></a>
 <font color="#aa8f8f"> | </font><a href="#ib"><font color="#d8b6b6">about imageboards</font></a>
-<font color="#aa8f8f"> | </font><a href="#phone"><font color="#d8b6b6">about android phone customization</font></a>
 <br>
 <br><br>
 <font color="#d1b9b1"><font size="2">※</font> there are updates from time to time</font>
@@ -821,7 +819,7 @@ i never felt comfortable using my accounts in a personal way, for both my sanity
 since 2012, when the old web as i knew was starting to collapse rapidly, i have been searching for a way to escape those uncomfortable spaces and find a way to express myself the way i want.
 many people feel the same as me, and are also trying to walk away from big social media, so i try to help myself and others by working on solutions !
 
-after some months of use, <a id="linkbjinho" href="#snippets">my web code snippets</a> have been a good help for making social media sites less stressful ( and cuter ) for me, but, as expected .. only as an inactive user.
+after some months of use, <a id="linkbjinho" href="/blog#snippets" target="_blank">my web code snippets</a> have been a good help for making social media sites less stressful ( and cuter ) for me, but, as expected .. only as an inactive user.
 i am still checking some youtube channels & tumblr blogs regularly, and it's actually nice !
 ( i received messages from people telling me that the codes helped them too, so i will keep them updated, there is no need to worry about that )
 
@@ -849,91 +847,6 @@ for group chatting, i've always liked to use message boards on people's sites wa
 that's what i'm looking for, so i will be working hard to make my own message board features for the puf cafe !</pre>
 
 <br><br><br><br><br><br>
-</font>
-
-
-<a name="snippets" id="snippets"></a><br>
-<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how do i use web code snippets to modify social media sites ?</font><br><br><br>
-<font color="#d8b9af">　( january 2022 + june 2022 )</font>
-<br><br>
-<font color="#B1A69E">
-<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-you might know that i have been using code snippets for the longest time to cutify some websites ( such as changing colors, background patterns, fonts.. ) but i have only recently thought of using them for more than only aesthetics.
-i realized that seeing the metric numbers ( such as following count, likes, and sometimes even comments ) were being very stressful and unmotivating for me, for many reasons that i have been talking endlessly about through all these years..
-so, as experimentation, i removed all the metrics. all of them.
-not only numbers, but also public comments, because i'm tired of seeing unwanted drama everywhere, people fighting on comments, and other things that have nothing to do with the content, that just annoys me to no end ..
-if i feel safe enough to see comments on a specific account, from a friend for example, i can simply deactivate the script for that moment !
-i can still like posts normally, comment on them, and check my own notifications so i can respond to people and see who responded me, so it haven't negatively affected my usability on these platforms.
-
-i made scripts for all the social media sites that i use / have used.
-each one of them has a slightly different appearance ( i customized them very spontaneously ) , but all of them have the metric numbers and public comments hidden, and some other things as well ( such as trending posts ) .
-i will keep my web code snippets updated whenever needed, and you can always check the latest version on my <a style="text-decoration: none;" href="https://middlepot.com/portfolio#webcodesnippets" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">portfolio</font></a> page !
-
-keep in mind that these codes were made by me, thinking on my own needs, and i am sharing it with you fluffies exactly as i use them.
-you are free to use them as you personally like, and modify according to your preferences. if you have some practice with css it should be enough for changing colors, images, or removing some stuff i did. feel free to experiment around !!
-
-i wish i could be more of an active help to others, and if i have to insert javascript into websites for achieving a more comfortable user experience, i am sharing them with you, in hopes to help in some way.
-
-the reality is that we have no control over our personal information on these platforms ( yes i do consider numbers something very personal, as it is clearly used for judging our "success" and "relevance" ) .
-on instagram, a few interaction numbers are hidden by standard ( at least for me ) but not the following count, while on youtube you can hide a few numbers, but not all of them either.
-tumblr gives options to hide both followers & notes - but only on your own blog, not on the tumblr site or app.
-twitter won't let you hide anything.
-it really really bothers me, deeply, so i look forward to more ways to hide all the unnecessarily stressing numbers from everyone, not only those who use my scripts, but i don't keep my hopes up ..
-
-i don't think those platforms care, at all, about people's mental health. hiding numbers would lead people to stop getting addicted to using social media for getting validation, and that means less money to them, right ?
-
-that's why i will work in solutions for this issue, by making my own safe spaces, that i can share with you fluffies <font color="#d3a5a5" style="font-size:11px;">♡</font>
-for now, i think those scripts are being a big help for me, and i hope they can help you as well .. at least a little bit
-
-using those scripts + cutifying the pages certainly work very well, not only for coping, but for healing as well.
-i might never be able to feel 100% comfortable using social platforms, but i feel at least .. 40% more comfortable, and that is a lot, i must say !
-
-but of course : inserting codes to hide some things, besides being a very useful tool, it's only a temporary solution for the real problem .. better saying, i am coping, not actually improving platforms for everyone.
-sadly, deep down, i know that people are still able to see all the numbers, and will judge others based on them just as much as the next person.
-that, itself, is a bit unmotivating.. i also can't run away from all the bothering posts that get suggested for me, weird dms from strangers, or avoid platforms to stop my posts from reaching more people because it's not "trending".
-those are extra issues that come with posting on social media actively, so i am looking forward to avoid that as a whole, by only opening these sites sporadically for checking specific content that i like, then going away.
-
-nonetheless, keeping myself away from looking to numbers all the time is absolutely refreshing, and is doing wonders to my mental health !!
-
-explaining in more detail : as an inactive user, just looking around and visiting people's accounts, i would say that the experience is heavily improved by the removal of mentioned problematic aspects of platform websites.
-i feel okay, specially on tumblr & youtube, because their recommendations are highly advertised by content you explicitly interacted with + you can easily avoid the advertised posts with paid subscriptions ; which makes the experience of using them more enjoyable than other platforms !
-but, as an active user / content creator, the experience is just half improved by the scripts, and no platforms fill my needs properly..
-all posts has to be painfully adapted to each platform particularities ( which really takes away my possibilities as a creator ) , i miss a lot of necessary features, and am constantly unhappy with the way platforms treats me, with how random strangers are able to treat me .. i feel unsafe.
-
-yes, i can't possibly avoid all the issues unless i stop using these platforms as a whole, but i can avoid myself from getting upset about many things on a daily basis - i have to make an effort to think about the issues that numbers cause, instead of being reminded of them all the time.
-this is good enough for now, i'm proud of my efforts for the time being !!
-
-well, it's always easier said than done : don't compare your growth to other peoples', don't pay attention to numbers, don't keep reading rude words, don't get involved in drama .. of course you shouldn't do any of that, but it's too hard to avoid when it's all over the place !!
-i noticed just how much i used to compare myself to other people and getting randomly upset with random drama that have nothing to do with me, when i stopped being able to do that. if i can't see it, i don't know it exist.
-it is completely different avoiding getting informed about important things that are happening, and just avoiding unnecessary stress and ridiculous drama. please allow yourself to be free from that !
-
-using "not only cuter but also improved" platforms this past month has made my experience with them a lot less heavy. now i open my feed and i don't feel disgusted, yay !
-do i feel happy though ? sometimes, yes, i like checking cute & comforting content, which inspires me a lot and keeps me motivated <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
-but as i mentioned above, deep down i still know there are lots of ugly stuff going on .. i just often don't know exactly what it is, or how ugly it is, giving my efforts into avoiding it.
-
-i don't want to be part of this, and help those ugly platforms grow stronger. that's why i will stick to the plan, and never give up !!
-it is a big and very complicated project, but i believe in my dreams.
-i somehow made an online game, and that's because bubu, my loved ones, you fluffies, are giving me all the support in the world !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
-so i must work hard for us all, to have our very deserved comfort spaces, because it is never too much to ask for !
-
-<b>edit //</b> i got many questions since i posted about my web code snippets, and some of you wanted to know if i have one for discord too.
-the answer is : yes, i did make a script for discord as well !
-at first it was only for inserting css, so i could make it pink .. but recently i updated it for also making the blocked people's messages disappear from the chat, which is nice !
-it doesn't help with all the issues that come with their useless blocking feature, but it's better than nothing, right ?
-it is a very comfy theme, zero harsh color contrast. i made it to work with the dark theme, but it's alright with the light theme too !
-i did my best to make it cute but also functional, so you can see both white and black stuff.
-what do you think ? hopefully using it will make your experience with discord a bit nicer <font color="#d3a5a5" style="font-size:11px;">♡</font>
-<a name="applysnippets" id="applysnippets"></a>
-
-okay, but.. how to apply these web code snippets ?
-there are multiple ways of inserting javascript into a website, but i will tell you how i personally prefer to do it :
-
-<sub>📍</sub> on my <b>pc</b>, i use the opera browser, and there we can use chrome extensions, so i use the "<a style="text-decoration: none;" href="https://chrome.google.com/webstore/detail/inject-code/jpbbdgndcngomphbmplabjginoihkdph" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">inject code</font></a>" one. i tested multiple things, including inserting the code directly on the "inspect element" settings, but that extension is the most reliable way to insert the codes automatically to websites so far ( and it's very easy to use too ) .
-
-<sub>📍</sub> on my <b>android</b> phone, i use the kiwi browser, and there we can use chrome extensions, so i also use the "<a style="text-decoration: none;" href="https://chrome.google.com/webstore/detail/inject-code/jpbbdgndcngomphbmplabjginoihkdph" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">inject code</font></a>" one, and it works perfectly just as on pc. keep in mind that the youtube code only works on the "desktop view" of the site, but the other codes work okay on the mobile versions too. my tip is : use your phone horizontally when on youtube, and you will simply get used to it.
-
-<sub>📍</sub> on my <b>ipad</b>, i use the safari browser, and i use the "<a style="text-decoration: none;" href="https://apps.apple.com/us/app/safari-snippets/id1126048257" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">snippets</font></a>" app for inserting the codes manually on each website, as i enter them. it works pretty similarly to the "shortcuts" app ( it was freezing my ipad because the codes are too big, so i just downloaded the "snippets" as an alternative ) . you have to click on the "share" symbol on safari and then on the "inject snippet" button so you can insert the code on each website, after opening them. sadly, i found no automatic way to do that on ios .. so my tip is : have a clean profile saved on bookmarks so you won't risk seeing "unwanted" content once entering websites, before applying your code !
-</pre><br><br><br><br><br><br>
 </font>
 
 
@@ -1233,21 +1146,6 @@ unfortunately ibs can be, indeed, very dirty places, frequented by frustrated te
 fortunately, i still know places on the internet that are good for healthy anonymous interaction <font color="#d3a5a5" style="font-size:11px;">♡</font>
 there are not many, but i really really like them, even when not perfect. things are temporary, so it's not smart to keep complaining, right ?
 by the way i really don't care about the reputation of the places on the internet, to be honest, so i'm always open to experiencing things before judging them by the contents that spread out there. for example, tumblr has a very dubious and embarrassing reputation, but i have used it for many years and absolutely love the beautiful and interesting content that i find exclusively there. people simply should try before saying anything.
-</pre><br><br><br><br><br><br>
-</font>
-
-<a name="phone" id="phone"></a><br>
-<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how do i customize my android phone ?</font><br><br><br>
-<font color="#d8b9af">　( october 2019 )</font>
-<br><br>
-<font color="#B1A69E">
-<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">first of all, you need to install this app called <a style="text-decoration: none;" href="https://play.google.com/store/apps/details?id=jp.co.a_tm.android.launcher" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">+home</font></a> , for android !
-this is a themes app where you can download icons, backgrounds and stuff .. however you don't have to download any of that ! i've already downloaded themes to use icons and some widgets but currently i just use the default app theme ( which will replace your main screen ).
-what i do is change the background and icons for png images with transparent background i have in the gallery, and this is the biggest secret : this app is the best i know for customization because it allows you to customize everything with your own images, it's very intuitive, you just have to click and hold on the app icons and choose what you want.
-you can also change the size of the icons, the size of the letters, if you want applications to have names ( you can also rename them ) and you can make app folders and organize everything, you can also change the folder icons.
-the app drawer page ( where all of them appear ) don't have customizable icons, but you don't have to use it if you don't want to, you can just organize everything into folders on the homepage ; but important : you need to go into this app drawer area, click the settings symbol and refresh the page whenever you install any new apps or you won't be able to place the icon on your homepage ! therefore, i recommend leaving the icon of this page somewhere for easy access.
-so, basically touch and hold the main screen and try all the customization options you find until you're satisfied ! you can also place images floating on the screen with the photo widget ( they can have transparent background too )
-tip : you will only see ads while customizing some things in the settings and sometimes on the app drawer page so it's not a bother, but ads will also appear if you leave an app folder with empty space. just fill all the folders so that doesn't happen !
 </pre><br><br><br><br><br><br>
 </font>
 
