--- a/portfolio.html
+++ b/portfolio.html
@@ -1067,98 +1067,6 @@ function resetPlayer2() {
 <img width="110" height="auto" src="https://i.imgur.com/9KEGT4h.png"><br><br>
 <img width="60" height="auto" src="https://i.imgur.com/9oEnG7a.png"> <img width="60" height="auto" src="https://i.imgur.com/SVN746x.png"> <img width="60" height="auto" src="https://i.imgur.com/8VD9uSz.png">
 <br><br><br>
-<div style="line-height:3px;"><br><br><br><a name="webcodesnippets" id="webcodesnippets"></a></div>
-<img src="https://i.imgur.com/hBScfeO.png"></center></font>
-<center>
-
-
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ web code snippets ..<br><br></font>
-<font style="font-size: 8px;" color="#b38d94"><br>
-( click the screenshots to get the .js files )
-</font>
-<br><br><br>
-<a href="https://file.pooftie.me/js/tmblr.js" target="_blank" id="linkzinhoinho"><img id="tmblr" width="400px" height="auto" src="https://i.imgur.com/AqVXPvO.png"/></a>
-        <script type = "text/javascript">
-            var imagetmblr = document.getElementById("tmblr");
-            var currentPostmblr = 0;
-            var imagestmblr = ["https://i.imgur.com/AqVXPvO.png", "https://i.imgur.com/GiOSK5h.png"]
-
-            function volgendefototmblr() {
-                if (++currentPostmblr >= imagestmblr.length)
-                    currentPostmblr = 0;
-
-                imagetmblr.src = imagestmblr[currentPostmblr];
-            }
-
-            setInterval(volgendefototmblr, 1000);
-        </script><br><br><br>
-
-<a href="https://file.pooftie.me/js/yt.js" target="_blank" id="linkzinhoinho"><img id="yt" width="400px" height="auto" src="https://i.imgur.com/RJNCZse.png"/></a>
-        <script type = "text/javascript">
-            var imageyt = document.getElementById("yt");
-            var currentPosyt = 0;
-            var imagesyt = ["https://i.imgur.com/RJNCZse.png", "https://i.imgur.com/Jg4RG81.png"]
-
-            function volgendefotoyt() {
-                if (++currentPosyt >= imagesyt.length)
-                    currentPosyt = 0;
-
-                imageyt.src = imagesyt[currentPosyt];
-            }
-
-            setInterval(volgendefotoyt, 1000);
-        </script><br><br><br>
-
-<a href="https://file.pooftie.me/js/twt.js" target="_blank" id="linkzinhoinho"><img id="twt" width="400px" height="auto" src="https://i.imgur.com/DSmMqN5.png"/></a>
-        <script type = "text/javascript">
-            var imagetwt = document.getElementById("twt");
-            var currentPostwt = 0;
-            var imagestwt = ["https://i.imgur.com/DSmMqN5.png", "https://i.imgur.com/Ttoe1um.png"]
-
-            function volgendefototwt() {
-                if (++currentPostwt >= imagestwt.length)
-                    currentPostwt = 0;
-
-                imagetwt.src = imagestwt[currentPostwt];
-            }
-
-            setInterval(volgendefototwt, 1000);
-        </script><br><br><br>
-
-<a href="https://file.pooftie.me/js/ig.js" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/5FvB3pk.png"/></a>
-        <script type = "text/javascript">
-            var imageig = document.getElementById("ig");
-            var currentPosig = 0;
-            var imagesig = ["https://i.imgur.com/5FvB3pk.png", "https://i.imgur.com/MWUL5W5.png"]
-
-            function volgendefotoig() {
-                if (++currentPosig >= imagesig.length)
-                    currentPosig = 0;
-
-                imageig.src = imagesig[currentPosig];
-            }
-
-            setInterval(volgendefotoig, 1000);
-        </script><br><br><br>
-
-<a href="https://file.pooftie.me/js/dscrd.js" target="_blank"><img id="dscrd" width="400px" height="auto" src="https://i.imgur.com/LghKMB0.png"></a>
-        <script type = "text/javascript">
-            var imagedscrd = document.getElementById("dscrd");
-            var currentPosdscrd = 0;
-            var imagesdscrd = ["https://i.imgur.com/LghKMB0.png", "https://i.imgur.com/UthtizP.png"]
-
-            function volgendefotodscrd() {
-                if (++currentPosdscrd >= imagesdscrd.length)
-                    currentPosdscrd = 0;
-
-                imagedscrd.src = imagesdscrd[currentPosdscrd];
-            }
-
-            setInterval(volgendefotodscrd, 1000);
-        </script>
-<br><br><br><a id="linkbjinho" href="https://file.pooftie.me/js/dscrd.css" target="_blank">( click here to get the .css version, for betterdiscord )</a>
-
-<br><br><br>
 <div style="line-height:3px;"><br><br><br><a name="3Dmodeling" id="3Dmodeling"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
@@ -1204,6 +1112,23 @@ function resetPlayer2() {
 
             setInterval(volgendefotolaptop, 1000);
         </script><br><br>
+<img id="flipphone" width="250px" height="auto" src="https://i.imgur.com/sBx5VYU.jpg">
+</img>
+        <script type = "text/javascript">
+            var imageflipphone = document.getElementById("flipphone");
+            var currentPosflipphone = 0;
+            var imagesflipphone = ["https://i.imgur.com/sBx5VYU.jpg", "https://i.imgur.com/Tw0csF6.jpg", "https://i.imgur.com/5dUfEPT.jpg"]
+
+            function volgendefotoflipphone() {
+                if (++currentPosflipphone >= imagesflipphone.length)
+                    currentPosflipphone = 0;
+
+                imageflipphone.src = imagesflipphone[currentPosflipphone];
+            }
+
+            setInterval(volgendefotoflipphone, 1000);
+        </script>
+<br><br>
 <img id="ipad" width="auto" height="310px" src="https://i.imgur.com/HJqeUmy.jpg">
 </img>
         <script type = "text/javascript">
@@ -1222,8 +1147,7 @@ function resetPlayer2() {
         </script><br><br>
 <img width="auto" height="350px" src="https://i.imgur.com/QmXja0G.png">　
 <img width="auto" height="350px" src="https://i.imgur.com/GT9w9dG.jpg"><br><br>
-<img width="auto" height="350px" src="https://i.imgur.com/eK2OD8Z.jpg">　
-<img width="auto" height="350px" src="https://i.imgur.com/xSkS9RH.png">
+<img width="200px" height="auto" src="https://i.imgur.com/kOFGdsq.png"> <img width="200px" height="auto" src="https://i.imgur.com/j6ehTHO.jpg">
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
